--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   "description": "Sneakerhead social media platform backend built with Express.js, MongoDB, Firebase and Redis",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.2.0",
     "helmet": "^8.1.0",
-    "ioredis": "^5.6.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.1",
