--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "seed": "node utils/seeder.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prod": "NODE_ENV=production node index.js",
+    "win-prod": "set NODE_ENV=production&& node index.js",
+    "lint": "eslint .",
+    "test": "jest"
   },
   "keywords": [
     "sneakers",
@@ -24,18 +27,28 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.0.1",
     "firebase-admin": "^13.2.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^6.3.4"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
