--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,6 @@ MONGO_URI=mongodb://username:password@localhost:27017/soulheads
 # JWT Secret for token signing
 JWT_SECRET=your-long-secure-jwt-secret-key
 
-# Upstash Redis Configuration
-UPSTASH_REDIS_REST_URL=https://your-redis-endpoint.upstash.io
-UPSTASH_REDIS_REST_TOKEN=your-upstash-token
-REDIS_URL=rediss://default:your-password@your-endpoint.upstash.io:6379
-
 # Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
@@ -17,6 +12,10 @@ CLOUDINARY_API_SECRET=your_api_secret
 # Server Configuration
 PORT=5000
 NODE_ENV=development
+
+# Development Testing (set to development for easier testing)
+# When NODE_ENV=development, you can use development auth bypasses
+DEV_MODE_ENABLED=true
 
 # CORS Configuration (comma-separated for multiple domains)
 ALLOWED_ORIGINS=http://localhost:3000,https://yourdomain.com
