--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
     "mongodb",
     "express",
     "nodejs",
-    "firebase",
-    "upstash",
-    "redis"
+    "firebase"
   ],
   "author": "",
   "license": "ISC",
-  "description": "Sneakerhead social media platform backend built with Express.js, MongoDB, Firebase and Redis",
+  "description": "Sneakerhead social media platform backend built with Express.js, MongoDB and Firebase",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.1",
@@ -34,7 +32,6 @@
     "express-validator": "^7.0.1",
     "firebase-admin": "^13.2.0",
     "helmet": "^8.1.0",
-    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
